--- a/addressbook-web-tests1/addressbook-web-tests1.csproj
+++ b/addressbook-web-tests1/addressbook-web-tests1.csproj
@@ -12,10 +12,12 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0"/>
-        <PackageReference Include="NUnit" Version="3.13.3"/>
-        <PackageReference Include="NUnit3TestAdapter" Version="4.2.1"/>
-        <PackageReference Include="NUnit.Analyzers" Version="3.6.1"/>
+        <PackageReference Include="NUnit" Version="4.3.2" />
+        <PackageReference Include="NUnit3TestAdapter" Version="5.0.0" />
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
+        <PackageReference Include="NUnitTestAdapter" Version="2.3.0" />
+        <PackageReference Include="Selenium.Support" Version="4.31.0" />
+        <PackageReference Include="Selenium.WebDriver" Version="4.31.0" />
     </ItemGroup>
 
 </Project>
