--- a/addressbook-web-tests/addressbook-web-tests.csproj
+++ b/addressbook-web-tests/addressbook-web-tests.csproj
@@ -11,11 +11,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="JetBrains.Annotations" Version="2025.1.0-eap1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0"/>
         <PackageReference Include="NUnit" Version="4.3.2" />
         <PackageReference Include="NUnit3TestAdapter" Version="5.0.0" />
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
         <PackageReference Include="NUnitTestAdapter" Version="2.3.0" />
+        <PackageReference Include="RestSharp" Version="112.1.0" />
         <PackageReference Include="Selenium.Support" Version="4.31.0" />
         <PackageReference Include="Selenium.WebDriver" Version="4.31.0" />
     </ItemGroup>
