--- a/addressbook-web-tests/addressbook-web-tests.csproj
+++ b/addressbook-web-tests/addressbook-web-tests.csproj
@@ -17,6 +17,10 @@
         <PackageReference Include="NUnit3TestAdapter" Version="5.0.0" />
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
         <PackageReference Include="NUnitTestAdapter" Version="2.3.0" />
+        <PackageReference Include="PlantUmlClassDiagramGenerator.SourceGenerator" Version="1.1.0">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="RestSharp" Version="112.1.0" />
         <PackageReference Include="Selenium.Support" Version="4.31.0" />
         <PackageReference Include="Selenium.WebDriver" Version="4.31.0" />
